Fix .gz file selection from "Recents" or "Downloads" category
If gz files are picked from "Recents" or "Downloads" category, we will end up with weird path, to workaround this, we will copy its gz file to our directory to avoid errors.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -72,4 +72,5 @@
     <string name="credits_google">Muitas outras pelo Google/Android</string>
     <string name="save_logs_file">Salvar logs para o arquivo</string>
     <string name="debug_build_info">Você está executando uma build depurável.\nDSU Sideloader %1$s (%2$d)</string>
+    <string name="gz_copy">Copiando arquivo gz para nossa pasta…</string>
 </resources>
