--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="credits_google">Many others by Google/Android</string>
     <string name="save_logs_file">Save logs to file</string>
     <string name="debug_build_info">You\'re running a debug build.\nDSU Sideloader %1$s (%2$d)</string>
+    <string name="gz_copy">Copying gz file into our folder…</string>
 </resources>
