Project cleanup Maybe something more ^^

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="cancel_description">Progress done till now will be gone, are you sure?</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="ok">Ok</string>
     <string name="allowed_userdata_allocation">Maximum available for allocation: %1$sGB</string>
     <string name="view_docs">View docs</string>
     <string name="learn_more">Learn more</string>
@@ -104,4 +105,24 @@
     <string name="copy">Copy text</string>
     <string name="copied">Copied</string>
     <string name="return_to_home">Return to homescreen?</string>
+    <string name="unmount_sd">Unmount SD</string>
+    <string name="unmount_sd_text">Temporary unmount sd when installing</string>
+    <string name="allocation_error_title">Allocation error</string>
+    <string name="allocation_error_description">GSI daemon is trying to allocate in external SD, but it fails for some reason (likely due sepolicy denials)\\nTo fix that, you can install DSU Sideloader Magisk\'s module, or temporary eject sd to avoid this (you can set this option permanently in preferences).</string>
+    <string name="allocation_error_action">Eject SD and retry</string>
+    <string name="storage_error_title">Storage error</string>
+    <string name="storage_error_description">Android requires, at least 40% of free storage to proceed installation, free up some space or decrease userdata size, and try again.</string>
+    <string name="filesystem_error_title">Filesystem features not found</string>
+    <string name="filesystem_error_description">Your kernel may be registering f2fs in different path, that one expected from GSI daemon \\nTo fix that, you can try to install DSU Sideloader Magisk\'s module, or change kernel.</string>
+    <string name="selinux_error_title">SELinux error</string>
+    <string name="selinux_error_description">Looks like SELinux is blocking GSI daemon to work due denials, this error is common devices running Android 10\\n To fix that, you can try to install DSU Sideloader Magisk\'s module, or set SELinux to permissive.\\n** Changing to permissive will weakens your device security.</string>
+    <string name="selinux_error_action">Retry with permissive</string>
+    <string name="extents_error_title">Extents error</string>
+    <string name="extents_error_description">On Android 10 devices, images/filesystem needs to have more than 512 extents.\n To fix that, you can try to install DSU Sideloader Magisk\'s module.</string>
+    <string name="start_installation">Start installation</string>
+    <string name="save_logs">Save logs</string>
+    <string name="saved_logs">Logs saved!</string>
+    <string name="selected_file_not_supported">Selected file is not supported</string>
+    <string name="missing_permissions">Missing permissions</string>
+    <string name="grant_read_logs_shizuku">READ_LOGS permission is required, use Shizuku to allow it?\nAfter granting permission, application needs to be reopened.</string>
 </resources>
