Initial Rooted DSU Installer Now DSU Sideloader is able to install images like DSU system-app does, still under testing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,24 +108,25 @@
     <string name="unmount_sd">Unmount SD</string>
     <string name="unmount_sd_text">Temporary unmount sd when installing</string>
     <string name="allocation_error_title">Allocation error</string>
-    <string name="allocation_error_description">GSI daemon is trying to allocate in external SD, but it fails for some reason (likely due sepolicy denials)\nTo fix that, you can install DSU Sideloader Magisk\'s module, or temporary eject sd to avoid this (you can set this option permanently in preferences).</string>
+    <string name="allocation_error_description">GSI daemon is trying to allocate in external SD, but it fails for some reason (likely due sepolicy denials)\nTo fix that, you can install DSU Sideloader Magisk\'s module, or temporary eject sd to avoid this (you can set this option permanently in preferences).\n\nError: %1$s</string>
     <string name="allocation_error_action">Eject SD and retry</string>
     <string name="storage_error_title">Storage error</string>
-    <string name="storage_error_description">Android requires, at least 40% of free storage to proceed installation, free up some space and try again.</string>
+    <string name="storage_error_description">Android requires, at least 40% of free storage to proceed installation, free up some space and try again.\n\nError: %1$s</string>
     <string name="filesystem_error_title">Filesystem features not found</string>
-    <string name="filesystem_error_description">Your kernel may be registering f2fs in different path, that one expected from GSI daemon \nTo fix that, you can try to install DSU Sideloader Magisk\'s module, or change kernel.</string>
+    <string name="filesystem_error_description">Your kernel may be registering f2fs in different path, that one expected from GSI daemon \nTo fix that, you can try to install DSU Sideloader Magisk\'s module, or change kernel.\n\nError: %1$s</string>
     <string name="selinux_error_title">SELinux error</string>
-    <string name="selinux_error_description">Looks like SELinux is blocking GSI daemon to work due denials, this error is common devices running Android 10\n To fix that, you can try to install DSU Sideloader Magisk\'s module, or set SELinux to permissive.\n** Changing to permissive will weakens your device security.</string>
+    <string name="selinux_error_description">Looks like SELinux is blocking GSI daemon to work due denials, this error is common devices running Android 10\n To fix that, you can try to install DSU Sideloader Magisk\'s module, or set SELinux to permissive.\n** Changing to permissive will weakens your device security.\n\nError: %1$s</string>
     <string name="selinux_error_action">Retry with permissive</string>
     <string name="extents_error_title">Extents error</string>
-    <string name="extents_error_description">On Android 10 devices, images/filesystem needs to have more than 512 extents.\n To fix that, you can try to install DSU Sideloader Magisk\'s module.</string>
+    <string name="extents_error_description">On Android 10 devices, images/filesystem needs to have more than 512 extents.\n To fix that, you can try to install DSU Sideloader Magisk\'s module.\n\nError: %1$s</string>
     <string name="start_installation">Start installation</string>
     <string name="save_logs">Save logs</string>
     <string name="saved_logs">Logs saved!</string>
     <string name="selected_file_not_supported">Selected file is not supported</string>
     <string name="missing_permissions">Missing permissions</string>
     <string name="grant_read_logs_shizuku">READ_LOGS permission is required, use Shizuku to allow it?\nAfter granting permission, application needs to be reopened.</string>
-    <string name="discard_gsi">A GSI is already installed, discard to continue?</string>
+    <string name="discard_gsi">A GSI is already installed, discard to continue?\n\n**All data present in DSU will be deleted.</string>
+    <string name="discard">Discard</string>
     <string name="discarding">Discarding…</string>
 
     <string name="installation_prompt">Installation prompt invoked, waiting user confirmation to proceed..</string>
@@ -140,6 +141,16 @@
     <string name="mreturn">Return</string>
     <string name="done_text">Image installed successfully, check your notifications to boot into dynamic system</string>
     <string name="installation_canceled">Installation canceled</string>
-    <string name="unknown_error">Unknown error</string>
+    <string name="unknown_error">Unknown error\n\nError: %1$s</string>
     <string name="installation_logs">Installation logs</string>
+    <string name="extracting_file">Extracting file…</string>
+    <string name="creating_partition">Creating %1$s partition</string>
+    <string name="failed_create_partition">Failed to create %1$s partition</string>
+    <string name="installation_finished">Image installed successfully</string>
+    <string name="dsu_already_installed">A DSU is already installed</string>
+    <string name="dsu_already_installed_warning">All data present in installed DSU will be DELETED after discarding, are you sure?</string>
+    <string name="use_builin_installer">Built-in installer</string>
+    <string name="use_builin_installer_desc">Faster, use internal APIs to install images directly</string>
+    <string name="requires_root">Requires root</string>
+    <string name="testing_feature">This feature is under testing, and may be unstable, are you sure?</string>
 </resources>
