Ask for READ_LOGS permission only when using Shizuku - Root operation mode does not requires this permission, rooted shell can already read logs. - System operation mode also does not requires it, since we obtain this permission already by being a privileged system app - ADB operation mode does not support app-side logging. By now, only Shizuku operation mode requires this permission.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,5 @@
     <string name="requires_log_permission">DSU Sideloader requires READ_LOGS permission (allows logcat reading)\nIt will be used to obtain installation progress and diagnose errors in DSU installation.\n\n**After granting permission, application needs to be reopened</string>
     <string name="grant">Grant</string>
     <string name="refuse">Refuse</string>
+    <string name="granting_permission">Waiting service to grant permission, please wait…</string>
 </resources>
