--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -13,9 +13,9 @@
     <string name="unsupported">Nicht unterstützt</string>
     <string name="file_unsupported">Die ausgewählte Datei wird nicht unterstützt, es werden nur xz-, gz- und img-Dateien unterstützt</string>
     <string name="got_it">Verstanden</string>
-    <string name="extracting_gzip">Extrahieren der gzip-Datei, damit wir die Größe der Bilddatei erhalten können (wird von der DSU-Befehlszeile benötigt)…</string>
-    <string name="compressing_img_to_gzip">Bilddatei in gzip-Format komprimieren (DSU benötigt ein Bild innerhalb von gzip)…</string>
-    <string name="extracting_xz">xz-Datei wird extrahiert…</string>
+    <string name="decompressing_gz">Extrahieren der gzip-Datei, damit wir die Größe der Bilddatei erhalten können (wird von der DSU-Befehlszeile benötigt)…</string>
+    <string name="compressing_to_gz">Bilddatei in gzip-Format komprimieren (DSU benötigt ein Bild innerhalb von gzip)…</string>
+    <string name="decompressing_xz">xz-Datei wird extrahiert…</string>
     <string name="almost_ready">Fast fertig …</string>
     <string name="brief_all_done">Fertig!\nÜberprüfe deine Benachrichtigungen…</string>
     <string name="done">Fertig</string>
@@ -31,22 +31,21 @@
     <string name="gsi_file_size">GSI-Dateigröße</string>
     <string name="start_process">GSI über DSU installieren</string>
     <string name="warning">Wenn Sie derzeit ein dynamisches System installiert haben (oder installiert werden), VERWERFEN Sie es, bevor Sie andere GSI installieren, andernfalls schlägt es fehl</string>
-    <string name="adb_howto_text">Um die Installation auf nicht gerooteten Geräten zu starten, müssen Sie diesen Befehl auf der Adb-Shell ausführen:</string>
-    <string name="adb_howto_directly">Wenn Sie die Adb-Shell ohne PC ausführen (zB: LADB, Shizukus Rish, WebADB, Bugjaeger…), können Sie die Adb-Shell entfernen und direkt ausführen:</string >
-    <string name="adb_howto_done">Wenn es fertig ist, überprüfe deine Benachrichtigungen, um den Installationsprozess zu verfolgen, du kannst diese App auch schließen</string>
-    <string name="device_unsupported">Ihr Gerät unterstützt keine dynamischen Partitionen (DSU hängt von dynamischen Partitionen ab)</string>
+    <string name="adb_how_to_adb_shell">Um die Installation auf nicht gerooteten Geräten zu starten, müssen Sie diesen Befehl auf der Adb-Shell ausführen:</string>
+    <string name="adb_how_to_shell">Wenn Sie die Adb-Shell ohne PC ausführen (zB: LADB, Shizukus Rish, WebADB, Bugjaeger…), können Sie die Adb-Shell entfernen und direkt ausführen:</string >
+    <string name="adb_how_to_done">Wenn es fertig ist, überprüfe deine Benachrichtigungen, um den Installationsprozess zu verfolgen, du kannst diese App auch schließen</string>
+    <string name="device_unsupported_description">Ihr Gerät unterstützt keine dynamischen Partitionen (DSU hängt von dynamischen Partitionen ab)</string>
     <string name="notice">Hinweis</string>
     <string name="notice_lockedbl_custom">Sie scheinen ein benutzerdefiniertes Betriebssystem auszuführen, das den Bootloader-Status vortäuscht. Sie benötigen einen UNLOCKED-Bootloader, um die meisten GSIs zu booten. Denken Sie daran, Ihren zu entsperren, falls dies noch nicht geschehen ist\nAuch die Kompatibilität mit benutzerdefinierten ROMs ist nicht\ nicht garantiert</string>
     <string name="notice_lockedbl">Du brauchst einen UNLOCKED Bootloader, um die meisten GSI über DSU zu booten\nDenke daran, deinen zu entsperren, falls noch nicht geschehen</string>
     <string name="notice_custom">Sie scheinen ein benutzerdefiniertes Betriebssystem auszuführen, die Kompatibilität mit benutzerdefinierten ROMs ist nicht garantiert</string>
-    <string name="operation_mode">Betriebsmodus: %1$s</string>
     <string name="operation_nonroot">Sobald GSI bereit ist, müssen Sie einen Befehl auf ADB ausführen, um GSI über die DSU-Installation zu starten</string>
     <string name="operation_magisk">Magisk wurde getestet und funktioniert gut mit DSU in den neuesten Versionen :)</string>
     <string name="operation_root_other">Wir haben diese App oder DSU-Funktion nicht auf anderen Root-Lösungen als Magisk getestet, aber Sie sollten in Ordnung sein</string>
-    <string name="storage">Speicher einrichten</string>
-    <string name="storage_info">Sie müssen einen Ordner auswählen, der als unser Anwendungsspeicher verwendet werden soll (erforderlich, um temporäre Dateien zu speichern)\n\nBitte wählen oder erstellen Sie einen neuen Ordner und erlauben Sie den Zugriff.</string>
+    <string name="setup_storage">Speicher einrichten</string>
+    <string name="setup_storage_description">Sie müssen einen Ordner auswählen, der als unser Anwendungsspeicher verwendet werden soll (erforderlich, um temporäre Dateien zu speichern)\n\nBitte wählen oder erstellen Sie einen neuen Ordner und erlauben Sie den Zugriff.</string>
     <string name="gigabyte_holder" translateable="false">%1$dGB</string>
-    <string name="storage_warning">Du hast weniger als 40 % freien Speicherplatz, der Installationsvorgang schlägt fehl, gib Speicherplatz frei</string>
+    <string name="storage_warning_description">Du hast weniger als 40 % freien Speicherplatz, der Installationsvorgang schlägt fehl, gib Speicherplatz frei</string>
     <string name="outdated_magisk">Magisk-Version wird nicht unterstützt\n\nIhre Magisk-Codeversion: %1$d\nErforderliche Codeversion: 23018 oder höher</string>
     <string name="other_options">Andere Optionen</string>
     <string name="keep_screen_on">Bildschirm eingeschaltet lassen</string>
@@ -57,18 +56,18 @@
     <string name="about">Über</string>
     <string name="info">Info.</string>
     <string name="logs_saved">Protokolle gespeichert</string>
-    <string name="about_text">Danksagungen, Bibliotheken und mehr…</string>
-    <string name="op_mode">Betriebsmodus</string>
+    <string name="about_description">Danksagungen, Bibliotheken und mehr…</string>
+    <string name="operation_mode">Betriebsmodus</string>
     <string name="debug_installation_text">Protokolle nach dem Aufrufen der DSU-Installationsaktivität anzeigen</string>
     <string name="debug_installation">Debug-Installation</string>
     <string name="userdata_size_text">In GB, Werte gelten beim Neustart der App</string>
     <string name="userdata_size">Standardgröße der Benutzerdaten</string>
     <string name="gsi_size_warning">Immer Auto verwenden, Änderung nicht empfohlen</string>
-    <string name="version">Version %1$s (%2$d)</string>
+    <string name="version_info">Version %1$s (%2$d)</string>
     <string name="slogan">Einfache App, die dir hilft, GSIs über die DSU-Funktion zu installieren.\n\n 2022 – VegaBobo</string>
-    <string name="github_sauce">Quellcode auf GitHub</string>
+    <string name="github_repo_description">Quellcode auf GitHub</string>
     <string name="author_github">Autor auf GitHub</string>
-    <string name="libraries">Bibliotheken</string>
+    <string name="libraries_title">Bibliotheken</string>
     <string name="libsu">libsu von topjohnwu</string>
     <string name="xzutils">XZ Utils von tukaani</string>
     <string name="credits_google">Viele andere von Google/Android</string>
