--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,9 +12,9 @@
     <string name="unsupported">不支持</string>
     <string name="file_unsupported">不支持您选择的文件，仅支持 xz、gz 和 img 格式的文件</string>
     <string name="got_it">了解</string>
-    <string name="extracting_gzip">解压 gzip 文件以获得 DSU 所需镜像文件的大小...</string>
-    <string name="compressing_img_to_gzip">将镜像文件压缩成 gzip 格式（DSU 需要 gzip 中的镜像）...</string>
-    <string name="extracting_xz">正在解压 xz 文件...</string>
+    <string name="decompressing_gz">解压 gzip 文件以获得 DSU 所需镜像文件的大小...</string>
+    <string name="compressing_to_gz">将镜像文件压缩成 gzip 格式（DSU 需要 gzip 中的镜像）...</string>
+    <string name="decompressing_xz">正在解压 xz 文件...</string>
     <string name="almost_ready">很快就好…</string>
     <string name="brief_all_done">完成！\N 请检查通知。</string>
     <string name="done">完成</string>
@@ -30,22 +30,21 @@
     <string name="gsi_file_size">GSI 文件大小</string>
     <string name="start_process">通过 DSU 安装 GSI</string>
     <string name="warning">如果您当前已安装（或正在安装）动态系统，请在安装其他 GSI 之前舍弃，否则将安装失败</string>
-    <string name="adb_howto_text">要在非 root 设备上开始安装，您需要在 adb shell 上运行以下命令：</string>
-    <string name="adb_howto_directly">如果您在没有PC的情况下运行adb shell (例如: LADB, Shizuku\'s Rish, WebADB, Bugjaeger..)，您可以去掉adb shell，直接运行：</string>
-    <string name="adb_howto_done">完成后，检查您的通知以查看安装进度，您也可以关闭此应用</string>
-    <string name="device_unsupported">您的设备不支持动态分区（DSU 依赖动态分区）</string>
+    <string name="adb_how_to_adb_shell">要在非 root 设备上开始安装，您需要在 adb shell 上运行以下命令：</string>
+    <string name="adb_how_to_shell">如果您在没有PC的情况下运行adb shell (例如: LADB, Shizuku\'s Rish, WebADB, Bugjaeger..)，您可以去掉adb shell，直接运行：</string>
+    <string name="adb_how_to_done">完成后，检查您的通知以查看安装进度，您也可以关闭此应用</string>
+    <string name="device_unsupported_description">您的设备不支持动态分区（DSU 依赖动态分区）</string>
     <string name="notice">注意</string>
     <string name="notice_lockedbl_custom">您似乎正在运行一个伪装 Bootloader 状态的自定义 ROM。引导 GSI 需要解锁 Bootloader，因此请确保您已将其解锁。此外，不保证与自定义 ROM 的兼容性。</string>
     <string name="notice_lockedbl">您需要解锁 Bootloader 才能通过 DSU 引导大多数 GSI\n如果尚未解锁，请记住解锁您的 Bootloader</string>
     <string name="notice_custom">您似乎在运行在自定义 ROM 上，无法保证与自定义 ROM 的兼容性</string>
-    <string name="operation_mode">操作模式：%1$s</string>
     <string name="operation_nonroot">GSI 准备就绪后，您需要在 ADB 上运行命令以通过 DSU 安装启动 GSI</string>
     <string name="operation_magisk">Magisk 已经过测试，可以在最新版本的 DSU 上正常工作:)</string>
     <string name="operation_root_other">我们没有在 Magisk 以外的其他 root 解决方案上测试过这个应用程序或 DSU 功能，但你应该没问题</string>
-    <string name="storage">设置存储</string>
-    <string name="storage_info">您需要选择一个文件夹作为我们的应用存储（需要存储临时文件）\n\n请选择或新建一个文件夹并允许访问。</string>
+    <string name="setup_storage">设置存储</string>
+    <string name="setup_storage_description">您需要选择一个文件夹作为我们的应用存储（需要存储临时文件）\n\n请选择或新建一个文件夹并允许访问。</string>
 
-    <string name="storage_warning">您的可用存储空间不足 40%，安装过程将失败，请释放一些空间</string>
+    <string name="storage_warning_description">您的可用存储空间不足 40%，安装过程将失败，请释放一些空间</string>
     <string name="outdated_magisk">不支持 Magisk 版本\n\n您的 Magisk 版本代码：%1$d\n所需版本代码：23018 或更高版本</string>
     <string name="other_options">其他选项</string>
     <string name="keep_screen_on">保持屏幕开启</string>
@@ -56,18 +55,18 @@
     <string name="about">关于</string>
     <string name="info">信息</string>
     <string name="logs_saved">已保存日志</string>
-    <string name="about_text">贡献者、使用的库，还有更多...</string>
-    <string name="op_mode">操作模式</string>
+    <string name="about_description">贡献者、使用的库，还有更多...</string>
+    <string name="operation_mode">操作模式</string>
     <string name="debug_installation_text">调用 DSU 安装活动后显示日志</string>
     <string name="debug_installation">调试安装</string>
     <string name="userdata_size_text">重启应用后应用该值。单位：GB</string>
     <string name="userdata_size">默认用户数据（userdata）分区大小</string>
     <string name="gsi_size_warning">建议将其保留为自动而不更改它。</string>
-    <string name="version">版本 %1$s (%2$d)</string>
+    <string name="version_info">版本 %1$s (%2$d)</string>
     <string name="slogan">一个简单的应用程序，帮助您通过 DSU 功能安装 GSI。\n\n 2022 - VegaBobo</string>
-    <string name="github_sauce">源代码 (GitHub)</string>
+    <string name="github_repo_description">源代码 (GitHub)</string>
     <string name="author_github">开发者 (GitHub)</string>
-    <string name="libraries">使用的库</string>
+    <string name="libraries_title">使用的库</string>
     <string name="libsu">libsu by topjohnwu</string>
     <string name="xzutils">XZ Utils by tukaani</string>
     <string name="credits_google">Many others by Google/Android</string>
